need permission to update service status

--- a/install/static-dnspod-traefik/rbac.yml
+++ b/install/static-dnspod-traefik/rbac.yml
@@ -4,7 +4,7 @@ metadata:
   name: helb
 rules:
 - apiGroups: [""]
-  resources: ["services"]
+  resources: ["services", "services/status"]
   verbs: ["*"]
 ---
 kind: ClusterRoleBinding
