--- a/glide.yaml
+++ b/glide.yaml
@@ -19,3 +19,5 @@ import:
   version: ^1.2.0
 - package: gopkg.in/yaml.v2
   version: ^2.2.2
+- package: github.com/stretchr/testify
+  version: ^1.3.0
