--- a/glide.yaml
+++ b/glide.yaml
@@ -21,3 +21,5 @@ import:
   version: ^2.2.2
 - package: github.com/stretchr/testify
   version: ^1.3.0
+- package: github.com/h2non/gock
+  version: ^1.0.14
