--- a/install/cm.yml
+++ b/install/cm.yml
@@ -4,8 +4,16 @@ metadata:
   name: helb
 data:
   config.yaml: |
-    host: ""
-    port: 53
+    dns:
+      host: ""
+      port: 53
+    proxy:
+      host: ""
+      port: 80
+      tlsPort: 443
+    tls:
+      key:
+      secret:
     domain: <YOUR DOMAIN>
     subDomain: <YOUR SUBDOMAIN>
     ttl: 600s
@@ -17,6 +25,3 @@ data:
       ip:
         static:
           ip: <YOUR IP>
-      proxy:
-        traefik:
-          url: http://<IN CLUSTER TRAEFIK DNSAME/IP>:8080/api/providers/rest
