--- a/install/rbac.yml
+++ b/install/rbac.yml
@@ -6,6 +6,9 @@ rules:
 - apiGroups: [""]
   resources: ["services", "services/status"]
   verbs: ["*"]
+- apiGroups: [""]
+  resources: ["nodes", "secrets"]
+  verbs: ["list","watch","get"]
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
