--- a/install/svc.yml
+++ b/install/svc.yml
@@ -5,10 +5,10 @@ metadata:
 spec:
   selector:
     app: helb
+  externalIPs:
+  - <YOUR IP>
+  sessionAffinity: None
   ports:
-    externalIPs:
-    - <YOUR IP>
-    sessionAffinity: None
     - protocol: UDP
       port: 53
       targetPort: 53
@@ -17,3 +17,11 @@ spec:
       port: 53
       targetPort: 53
       name: dns-tcp
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+      name: http
+    - protocol: TCP
+      port: 443
+      targetPort: 443
+      name: https
