--- a/install/deploy.yml
+++ b/install/deploy.yml
@@ -1,3 +1,4 @@
+# deploy.yml
 kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
@@ -20,7 +21,7 @@ spec:
           configMap:
             name: helb
       containers:
-      - image: joesonw/helb:v1alpha1.0.0
+      - image: joesonw/helb:v1alpha
         name: helb
         ports:
         - name: dns
@@ -40,3 +41,5 @@ spec:
             mountPath: /config
         args:
         - /config/config.yaml
+
+
