--- a/install/rbac.yml
+++ b/install/rbac.yml
@@ -1,3 +1,4 @@
+# rbac.yml
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
@@ -22,3 +23,4 @@ roleRef:
   kind: ClusterRole
   name: helb
   apiGroup: rbac.authorization.k8s.io
+
